build22/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Date_of_Business_Open__c</fullName>
        <label>Date of Business Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Yearly_Business_Tax__c</fullName>
        <label>Estimated Yearly Business Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Yearly_Sales_Tax__c</fullName>
        <label>Estimated Yearly Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Do not adjust. Used for external relationships.</inlineHelpText>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Expiration__c</fullName>
        <label>Insurance Policy Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 5</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>10-25</fullName>
                </value>
                <value>
                    <fullName>25-50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Alternate__c</fullName>
        <label>Phone Alternate</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Fax__c</fullName>
        <label>Phone Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sellers_Permit_Number__c</fullName>
        <label>Sellers Permit Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_License_ID__c</fullName>
        <label>State License ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_license_city__c</fullName>
        <label>Type of license (city)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_license_county__c</fullName>
        <label>Type of license (county)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>